# VR-Experimentation

./: .gitignore  CMakeLists.txt  README.md
RuntimeDLLs/: CREATE_ASSETS_SYMLINKS.BAT  CREATE_ASSETS_SYMLINKS.SH
assets/shaders/: SimpleShader.frag  SimpleShader.vert
src/: GameScreen.cpp  GameScreen.hpp  Main.cpp  SimpleModel.cpp  SimpleModel.hpp  VR.cpp  VR.hpp
src/sfz/gl/: Model.cpp  Model.hpp
